--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
           </div>
           <button class="change">Change</button>
         </section>
-
-        <button class="buttom1">Proceed to Payment</button>
-        <button class="buttom2">Cancel Order</button>
+        <div class="buttons">
+          <button class="button1">Proceed to Payment</button>
+          <button class="button2">Cancel Order</button>
+        </div>
       </div>
     </main>
   </body>
