--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
     <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | Order summary card</title>
 
@@ -21,14 +16,9 @@
       <img class="illustration-hero" src="./illustration-hero.svg" />
 
       <div class="container">
-        <section class="order">
-          <h1>Order Summary</h1>
+        <h1>Order Summary</h1>
 
-          <p>
-            You can now listen to millions of songs, audiobooks, and podcasts on
-            any device anywhere you like!
-          </p>
-        </section>
+        <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
 
         <section class="annualPlan">
           <img class="icon-music" src="./icon-music.svg" />
